# SistemasOperativos-1

./: README.md
TP2/include/: intern_command.h
TP2/src/: command.c  intern_command.c  main.c  shell.c
TP2/tests/unit/include/: intern_command_test.h  shell_test.h
TP2/tests/unit/src/: intern_command_test.c  shell_test.c  test_main.c
TP3/: CMakeLists.txt
TP3/lib/memory/: CMakeLists.txt
TP3/lib/memory/include/: memory.h
TP3/lib/memory/src/: memory.c
TP3/src/: main.c
TP3/tests/: CMakeLists.txt
TP3/tests/unit/src/: test_main.c
